fix checkstyle and build fe